# xmpp-rs

./: .gitea  .gitlab-ci.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md
.forgejo/workflows/: build.yaml
icu/src/: bindings.rs  error.rs  idna2008.rs  lib.rs  spoof.rs  stringprep.rs
jid/: CHANGELOG.md  Cargo.toml
jid/src/: error.rs  inner.rs  lib.rs  parts.rs
minidom/: CHANGELOG.md  Cargo.toml
minidom/src/: element.rs  error.rs  lib.rs  node.rs  parser.rs  tests.rs  tree_builder.rs
parsers/: Cargo.toml  ChangeLog  README.md  build.rs  doap.xml
parsers/examples/: generate-caps.rs
parsers/src/: attention.rs  avatar.rs  bind.rs  blocking.rs  bob.rs  bookmarks.rs  bookmarks2.rs  caps.rs  carbons.rs  cert_management.rs  chatstates.rs  component.rs  csi.rs  data_forms.rs  date.rs  delay.rs  disco.rs  ecaps2.rs  eme.rs  extdisco.rs  forwarding.rs  hashes.rs  http_upload.rs  ibb.rs  ibr.rs  idle.rs  iq.rs  jid_prep.rs  jingle.rs  jingle_dtls_srtp.rs  jingle_ft.rs  jingle_grouping.rs  jingle_ibb.rs  jingle_ice_udp.rs  jingle_message.rs  jingle_raw_udp.rs  jingle_rtcp_fb.rs  jingle_rtp.rs  jingle_rtp_hdrext.rs  jingle_s5b.rs  (+36 more)
parsers/src/muc/: mod.rs  muc.rs  user.rs
parsers/src/pubsub/: event.rs  mod.rs  owner.rs  pubsub.rs
parsers/src/util/: error.rs  helpers.rs  macros.rs  mod.rs  text_node_codecs.rs
sasl/: CHANGELOG.md  Cargo.toml  README.md
sasl/src/: error.rs  lib.rs  secret.rs
sasl/src/client/: mod.rs
sasl/src/client/mechanisms/: anonymous.rs  mod.rs  plain.rs  scram.rs
sasl/src/common/: mod.rs  scram.rs
sasl/src/mechanisms/: anonymous.rs  mod.rs  plain.rs  scram.rs
sasl/src/server/: mod.rs
sasl/src/server/mechanisms/: anonymous.rs  mod.rs  plain.rs  scram.rs
tokio-xmpp/: Cargo.toml  ChangeLog
tokio-xmpp/examples/: contact_addr.rs  download_avatars.rs  echo_bot.rs  echo_component.rs  send_message.rs
tokio-xmpp/src/: connect.rs  error.rs  happy_eyeballs.rs  lib.rs  starttls.rs  stream_features.rs  stream_start.rs  xmpp_codec.rs  xmpp_stream.rs
tokio-xmpp/src/client/: async_client.rs  bind.rs  connect.rs  mod.rs  simple_client.rs
tokio-xmpp/src/component/: connect.rs  mod.rs
tokio-xmpp/src/starttls/: client.rs  error.rs  happy_eyeballs.rs  mod.rs
tokio-xmpp/src/tcp/: mod.rs
xmpp/: Cargo.toml  ChangeLog
xmpp/examples/: hello_bot.rs
xmpp/src/: agent.rs  builder.rs  delay.rs  event.rs  event_loop.rs  feature.rs  lib.rs
xmpp/src/disco/: mod.rs
xmpp/src/iq/: get.rs  mod.rs  result.rs  set.rs
xmpp/src/message/: mod.rs  send.rs
xmpp/src/message/receive/: chat.rs  group_chat.rs  mod.rs
xmpp/src/muc/: mod.rs  private_message.rs  room.rs
xmpp/src/presence/: mod.rs  receive.rs  send.rs
xmpp/src/pubsub/: avatar.rs  mod.rs
xmpp/src/upload/: receive.rs  send.rs
