[workspace]
members = [  # alphabetically sorted
  "icu",
  "jid",
  "minidom",
  "parsers",
  "tokio-xmpp",
  "xmpp",
]

[patch.crates-io]
icu = { path = "icu" }
jid = { path = "jid" }
minidom = { path = "minidom" }
tokio-xmpp = { path = "tokio-xmpp" }
xmpp-parsers = { path = "parsers" }
xmpp = { path = "xmpp" }
