[workspace]
members = [  # alphabetically sorted
  "jid",
  "minidom",
  "parsers",
  "sasl",
  "tokio-xmpp",
  "xmpp",
]

[patch.crates-io]
jid = { path = "jid" }
minidom = { path = "minidom" }
sasl = { path = "sasl" }
tokio-xmpp = { path = "tokio-xmpp" }
xmpp-parsers = { path = "parsers" }
xmpp = { path = "xmpp" }
