[workspace]
members = [  # alphabetically sorted
  "jid",
  "minidom",
  "parsers",
  "sasl",
  "tokio-xmpp",
  "xmpp",
]
resolver = "2"

[patch.crates-io]
jid = { path = "jid" }
minidom = { path = "minidom" }
sasl = { path = "sasl" }
tokio-xmpp = { path = "tokio-xmpp" }
xmpp-parsers = { path = "parsers" }
xmpp = { path = "xmpp" }
