[package]
name = "jid"
version = "0.10.0"
authors = [
  "lumi <lumi@pew.im>",
  "Emmanuel Gil Peyrot <linkmauve@linkmauve.fr>",
  "Maxime “pep” Buquet <pep@bouah.net>",
]
description = "A crate which provides a Jid struct for Jabber IDs."
homepage = "https://gitlab.com/xmpp-rs/xmpp-rs"
repository = "https://gitlab.com/xmpp-rs/xmpp-rs"
documentation = "https://docs.rs/jid"
readme = "README.md"
keywords = ["xmpp", "jid"]
license = "MPL-2.0"
edition = "2021"

[badges]
gitlab = { repository = "xmpp-rs/xmpp-rs" }

[dependencies]
memchr = "2.5"
serde = { version = "1.0", features = ["derive"], optional = true }
stringprep = "0.1.3"
quote = { version = "1.0", optional = true }
proc-macro2 = { version = "1.0", optional = true }
# same repository dependencies
minidom = { version = "0.15", optional = true, path = "../minidom" }

[dev-dependencies]
serde_test = "1"
jid = { path = ".", features = [ "serde" ] }

[features]
default = ["std"]
std = []
quote = ["dep:quote", "dep:proc-macro2"]
