[package]
name = "sasl"
version = "0.4.3"
authors = ["lumi <lumi@pew.im>"]
description = "A crate for SASL authentication. Currently only does the client side."
homepage = "https://gitlab.com/lumi/sasl-rs"
repository = "https://gitlab.com/lumi/sasl-rs"
documentation = "https://docs.rs/sasl"
readme = "README.md"
keywords = ["sasl", "authentication"]
license = "LGPL-3.0+"
edition = "2018"

[badges]
gitlab = { repository = "lumi/sasl-rs" }

[features]
default = ["scram"]
scram = ["base64", "getrandom", "sha-1", "sha2", "hmac", "pbkdf2"]

[dependencies]
base64 = { version = "0.10", optional = true }
getrandom = { version = "0.1", optional = true }
sha-1 = { version = "0.8", optional = true }
sha2 = { version = "0.8", optional = true }
hmac = { version = "0.7", optional = true }
pbkdf2 = { version = "0.3", default-features = false, optional = true }
