[package]
name = "tokio-xmpp"
version = "3.5.0"
authors = ["Astro <astro@spaceboyz.net>", "Emmanuel Gil Peyrot <linkmauve@linkmauve.fr>", "pep <pep+code@bouah.net>", "O01eg <o01eg@yandex.ru>", "SonnyX <randy@vonderweide.nl>", "Paul Fariello <paul@fariello.eu>"]
description = "Asynchronous XMPP for Rust with tokio"
license = "MPL-2.0"
homepage = "https://gitlab.com/xmpp-rs/xmpp-rs"
repository = "https://gitlab.com/xmpp-rs/xmpp-rs"
documentation = "https://docs.rs/tokio-xmpp"
categories = ["asynchronous", "network-programming"]
keywords = ["xmpp", "tokio"]
edition = "2021"

[dependencies]
bytes = "1"
futures = "0.3"
idna = "0.4"
log = "0.4"
native-tls = { version = "0.2", optional = true }
sasl = "0.5"
tokio = { version = "1", features = ["net", "rt", "rt-multi-thread", "macros"] }
tokio-native-tls = { version = "0.3", optional = true }
tokio-rustls = { version = "0.24", optional = true }
tokio-stream = { version = "0.1", features = [] }
tokio-util = { version = "0.7", features = ["codec"] }
hickory-resolver = "0.24"
xmpp-parsers = "0.20"
minidom = "0.15"
rxml = "0.9.1"
webpki-roots = { version = "0.25", optional = true }
rand = "^0.8"
syntect = { version = "5", optional = true }

[dev-dependencies]
env_logger = { version = "0.10", default-features = false, features = ["auto-color", "humantime"] }

[features]
default = ["tls-native"]
tls-rust = ["tokio-rustls", "webpki-roots"]
tls-native = ["tokio-native-tls", "native-tls"]
syntax-highlighting = ["syntect"]
