[package]
name = "xmpp"
version = "0.3.0"
authors = [
  "Emmanuel Gil Peyrot <linkmauve@linkmauve.fr>",
  "Maxime “pep” Buquet <pep@bouah.net>",
]
description = "High-level XMPP library"
homepage = "https://xmpp.rs"
repository = "https://gitlab.com/xmpp-rs/xmpp-rs"
keywords = ["xmpp", "jabber", "chat", "messaging", "bot"]
categories = ["network-programming"]
license = "MPL-2.0"
edition = "2018"

[dependencies]
tokio-xmpp = "3.2"
xmpp-parsers = "0.19"
futures = "0.3"
tokio = { version = "1", features = ["fs"] }
log = "0.4"
reqwest = { version = "0.11.8", features = ["stream"] }
tokio-util = { version = "0.7", features = ["codec"] }

[dev-dependencies]
env_logger = "0.10"

[features]
default = ["avatars"]
avatars = []
